@@ -3,7 +3,7 @@
 
 import sys, re
 
-print("/* Generated by typeslots.py $Revision$ */")
+print("/* Generated by typeslots.py */")
 res = {}
 for line in sys.stdin:
     m = re.match("#define Py_([a-z_]+) ([0-9]+)", line)
